force-app/main/default/objects/PDRI__Deployment_Result__c/PDRI__Deployment_Result__c.object-meta.xml
<CustomObject>
    <label>Deployment Result</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Deployment Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>