force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__CSV_Export_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>PDRI__CSV_Export_Download_URL__c</fullName>
    <label>CSV Export Download URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>