force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__Data_Preview_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Preview_ID__c</fullName>
    <description>Data Preview ID</description>
    <label>Data Preview ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>