force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__Data_Preview_Selection_Version__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Preview_Selection_Version__c</fullName>
    <label>Data Preview Selection Version</label>
    <length>64</length>
    <type>Text</type>
</CustomField>