force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__Deployment__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>PDRI__Deployment__c</referenceTo>
    <relationshipLabel>Deployment Results</relationshipLabel>
    <relationshipName>Deployment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>