force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__Last_Deployed_Data_Set__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Last_Deployed_Data_Set__c</fullName>
    <formula>PDRI__Last_Deployed_Data_Set_Result__r.PDRI__Data_Set__r.PDRI__Data_Set_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Deployed Data Set</label>
    <type>Text</type>
</CustomField>