force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__of_DataSets_Processed__c.field-meta.xml
<CustomField>
    <fullName>PDRI__of_DataSets_Processed__c</fullName>
    <label># of DataSets Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>