force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PDRI__Deployment_Type</valueSetName>
    </valueSet>
</CustomField>