force-app/main/default/objects/PDRI__Deployment_Result__c/fields/PDRI__VCS_Branch__c.field-meta.xml
<CustomField>
    <fullName>PDRI__VCS_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCS Branch</label>
    <referenceTo>PDRI__VCS_Branch__c</referenceTo>
    <relationshipName>Deployment_Result_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>