force-app/main/default/objects/PDRI__Deployment_Result__c/listViews/PDRI__All.listView-meta.xml
<ListView>
    <fullName>PDRI__All</fullName>
    <columns>PDRI__Last_Deployed_Data_Set__c</columns>
    <columns>NAME</columns>
    <columns>PDRI__Type__c</columns>
    <columns>PDRI__Result__c</columns>
    <columns>PDRI__Error__c</columns>
    <columns>PDRI__Source_Connection__c</columns>
    <columns>PDRI__Status__c</columns>
    <columns>PDRI__Target_Connection__c</columns>
    <columns>PDRI__Data_Record_Failures__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>