force-app/main/default/objects/PDRI__Deployment_Result__c/listViews/X23rd_June_Deployment.listView-meta.xml
<ListView>
    <fullName>X23rd_June_Deployment</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PDRI__Deployment__c</columns>
    <columns>PDRI__Status__c</columns>
    <columns>PDRI__Target_Connection__c</columns>
    <columns>PDRI__Source_Connection__c</columns>
    <columns>PDRI__Type__c</columns>
    <columns>PDRI__Result__c</columns>
    <columns>PDRI__Last_Deployed_Data_Set__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>6/23/2022 12:00 AM</value>
    </filters>
    <label>23rd June Deployment</label>
</ListView>